# cvoccol

./: .gitignore  COPYING  Makefile.in  README.md  configure  configure.ac  libtool
lm/: 2593.dic  2593.lm  2593.log_pronounce  2593.sent  2593.vocab  TAR2593.tgz
scripts/: error  hifi_off  hifi_on  screen_off  screen_on  straylight  tv_off  tv_on
src/: Makefile.am  Makefile.in  cvoccol.c
